--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "dotenv": "^17.2.3",
     "firebase": "^10.12.4",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
